[gd_scene load_steps=10 format=4 uid="uid://5itfgkc1r2v"]

[ext_resource type="Script" path="res://treecasino.gd" id="1_f38fj"]
[ext_resource type="Texture2D" uid="uid://cjech4pexfcn3" path="res://art/starrynight.png" id="1_udqnh"]
[ext_resource type="Texture2D" uid="uid://bba1ayh851ej4" path="res://art/treefloor.png" id="2_kvfuy"]
[ext_resource type="Texture2D" uid="uid://c81n78dtm7boj" path="res://art/g.png" id="3_0gra6"]
[ext_resource type="FontFile" uid="uid://br11nsxm1m2s3" path="res://PublicPixel-E447g.ttf" id="4_8atse"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5samb"]
texture = ExtResource("2_kvfuy")
separation = Vector2i(0, 16)
texture_region_size = Vector2i(109, 64)
0:0/0 = 0
0:1/0 = 0

[sub_resource type="TileSet" id="TileSet_hergc"]
sources/0 = SubResource("TileSetAtlasSource_5samb")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vfomn"]
texture = ExtResource("3_0gra6")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
0:6/0 = 0
1:6/0 = 0
0:7/0 = 0
1:7/0 = 0

[sub_resource type="TileSet" id="TileSet_1w4ex"]
sources/0 = SubResource("TileSetAtlasSource_vfomn")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_f38fj")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("1_udqnh")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(0, -1020)
scale = Vector2(4, 4)
texture = ExtResource("1_udqnh")
centered = false

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-14, 0)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAEAA0AAAAAAAEAAAAEAAkAAAAAAAAAAAAEAAUAAAAAAAEAAAAEAAEAAAAAAAAAAAAEAP3/AAAAAAEAAAAEAPn/AAAAAAAAAAA=")
tile_set = SubResource("TileSet_hergc")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
self_modulate = Color(0.808998, 0.808998, 0.808998, 1)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAAAA8AAAAAAAAAAAABAA8AAAAAAAAAAAACAA8AAAAAAAAAAAADAA8AAAAAAAAAAAAEAA8AAAAAAAAAAAAFAA8AAAAAAAAAAAAGAA8AAAAAAAAAAAAHAA8AAAAAAAAAAAAIAA8AAAAAAAAAAAA=")
tile_set = SubResource("TileSet_1w4ex")

[node name="Node" type="Node2D" parent="."]
position = Vector2(-14, 0)

[node name="RichTextLabel" type="RichTextLabel" parent="Node"]
offset_left = 67.0
offset_top = 899.0
offset_right = 513.0
offset_bottom = 965.0
theme_override_fonts/normal_font = ExtResource("4_8atse")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]1"
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel2" type="RichTextLabel" parent="Node"]
offset_left = 67.0
offset_top = 669.0
offset_right = 513.0
offset_bottom = 735.0
theme_override_fonts/normal_font = ExtResource("4_8atse")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]2"

[node name="RichTextLabel3" type="RichTextLabel" parent="Node"]
offset_left = 67.0
offset_top = 411.0
offset_right = 513.0
offset_bottom = 477.0
theme_override_fonts/normal_font = ExtResource("4_8atse")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]3"

[node name="RichTextLabel4" type="RichTextLabel" parent="Node"]
offset_left = 67.0
offset_top = 153.0
offset_right = 513.0
offset_bottom = 219.0
theme_override_fonts/normal_font = ExtResource("4_8atse")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]4"

[node name="RichTextLabel5" type="RichTextLabel" parent="Node"]
offset_left = 67.0
offset_top = -101.0
offset_right = 513.0
offset_bottom = -35.0
theme_override_fonts/normal_font = ExtResource("4_8atse")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]5"

[node name="RichTextLabel6" type="RichTextLabel" parent="Node"]
offset_left = 67.0
offset_top = -356.0
offset_right = 513.0
offset_bottom = -290.0
theme_override_fonts/normal_font = ExtResource("4_8atse")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]6"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
